# augmentedLimbs

./: .gitignore  CMakeLists.txt  ChangeLog  README  README.md  Server.cpp  Server.h  arucoTest.cpp  aruco_test_board_ogre.cpp  aruco_test_board_ogre_mask.cpp  aruco_test_ogre.cpp  main.cpp  server.h  vr.cpp
cmake/: FindGSL.cmake
data/: plugins.cfg  plugins_windows.cfg
src/: PulseDetector.cpp  PulseDetector.h  Server.cpp  vr.cpp  vr.h
